# atml-project-laplacianformer

./: .gitignore  .gitmodules  README.md  benchmark.py  datasets.ipynb  download_sample.py  pyproject.toml  requirements.txt  setup_and_run.sh  train.py
configs/: config.yaml
configs/benchmark/: default.yaml  final.yaml
configs/datamodule/: ag_news.yaml  agnews.yaml  cifar100.yaml  cityscapes_segmentation.yaml  coco_segmentation.yaml  conll2003.yaml  imagenet.yaml  ontonotes5.yaml  seq2seq.yaml  sst2.yaml  stanford_background_segmentation.yaml  voc.yaml  voc2012_segmentation.yaml  wikitext2.yaml
configs/experiment/: cv_cifar100_laplacian_tiny_bs64_ga2_adamw_cv_default.yaml  cv_cifar100_vanilla_tiny_bs64_ga2_lr1e_4_wd1e_2.yaml  cv_imagenet_laplacian_tiny_bs64_ga2_lr4e_4_wd1e_2.yaml  cv_imagenet_vanilla_tiny_bs64_ga2_lr1e_4_wd1e_2.yaml  ner_conll2003_final.yaml  ner_ontonotes5_final.yaml  nlp_ag_news_laplacian_medium_stable.yaml  nlp_sst2_final_laplacian.yaml  nlp_sst2_final_vanilla.yaml  (+3 more)
configs/logger/: wandb.yaml
docs/: laplacian_cuda_server.md
models/: laplacian_attn.py  vit_wrapper.py
scripts/: download_imagenet.py  run_cv_bs64_ga2_experiments.sh  run_cv_classification_matrix.sh  run_ner_final_configs.sh  run_ner_gen2_model_matrix.sh  run_ner_model_matrix.sh  run_nlp_best_stability_configs.sh  run_nlp_classification_model_matrix.sh  run_nlp_final_configs.sh  run_nlp_recommended_configs.sh  run_nlp_stability_sweep.sh  run_seg_final_configs.sh  run_segmentation_model_matrix.sh  run_text_gen_model_matrix.sh  visualize_attention.py
tests/: test_laplacian_1d.py
(+100 files in other folders)
