[project]
name = "atml-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
