[project]
name = "atml-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=1.1.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "loguru>=0.7.3",
    "torch>=2.11.0",
    "torchmetrics>=1.0.3",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "transformers[torch]>=5.5.0",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
